# two-towers-gigglers

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  sxu65zwdv8sn6d
data/: README.md
redis/scripts/: init_commands.txt
scripts/: api-entrypoint.sh
src/: api.py  create_embeddings.py  dataloader.py  embeddings.py  evaluate.py  index_docs_to_redis.py  inference.py  inference_manual.py  load_bing_dataset.py  process_bing_dataset.py  run_two_towers.py  run_two_towers_improved.py  streamlit_app.py  sweep_config.py  test_dataloader.py  train_two_towers.py  two_towers.py  utils.py  wandb_init.py  wandb_utils.py
src/tests/: check_cuda.py  test_api.sh  test_dataloader.py  test_inference.py  test_redis_vector_lookup.py
