[project]
name = "two-towers-gigglers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "datasets>=2.14.4",
    "fasttext>=0.9.3",
    "numpy==1.23",
    "pandas>=1.5.1",
    "redis>=6.2.0",
    "redisearch>=2.0.0",
    "torch==2.2.0",
    "wandb>=0.20.1",
]
