[project]
name = "two-towers-gigglers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "datasets>=2.14.4",
    "fasttext>=0.9.3",
    "numpy==1.23",
    "pandas>=1.5.1",
    "redis>=6.2.0",
    "redisearch>=2.0.0",
    "tqdm>=4.0.1",
    "torch==2.2.2",
    "wandb>=0.20.1",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "streamlit>=1.46.0",
    "requests>=2.32.4",
    "scikit-learn>=1.2.2",
    "faiss-gpu>=1.7.2",
]
